# clinical_trial_pipeline

./: .dockerignore  .gitignore  Dockerfile  LICENSE  NEXT_STEPS.md  README.md  deployment.yaml  docker-compose.yml  explanation_doc.md  llm_module.py  prefect.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
data/cache/: metadata_hash.txt
debug/: cleanup.py  cleanup_cache.py  test_api.py  test_enrichment_apis.py
docs/: Architecture.md  ChemBL_additional.md  alex_suggestions.md  api_information.md  api_metadata_doc.md  chembl_documentation.md  debug_api.py  enrichment_guide.md  prefect_db_doc.md  prefect_gcp_doc.md  sample_response.json
src/pipeline/: __init__.py  analysis.py  cleanup.py  config.py  enrich.py  etl.py  flow.py  gemini_utils.py  utils.py
tests/: conftest.py  test_enrich.py  test_etl.py
